--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -26,26 +26,13 @@
                 <div class="card-body">
                   <ul class="list-menu">
                     <li>
-                      <a href="#">People</a>
-                    </li>
+                      <a href="{% url 'store' %}">All Products</a>
                     <li>
-                      <a href="#">Watches</a>
-                    </li>
+                    {% for category in categories %}
                     <li>
-                      <a href="#">Cinema</a>
+                      <a href="{{ category.get_url }}">{{ category.Category_Name }}</a>
                     </li>
-                    <li>
-                      <a href="#">Clothes</a>
-                    </li>
-                    <li>
-                      <a href="#">Home items</a>
-                    </li>
-                    <li>
-                      <a href="#">Animals</a>
-                    </li>
-                    <li>
-                      <a href="#">People</a>
-                    </li>
+                    {% endfor %}
                   </ul>
                 </div> <!-- card-body.// -->
               </div>
