--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
       <section class="footer-bottom border-top row">
         <div class="col-md-2">
-          <p class="text-muted">&copy 2019 Samantha Christmas Technologies</p>
+          <p class="text-muted">&copy {% now "Y" %} Samantha Christmas Technologies</p>
         </div>
         <div class="col-md-8 text-md-center">
           <span class="px-2">atomicstructure@github.com</span>
