--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <section class="section-intro padding-y-sm">
       <div class="container">
         <div class="intro-banner-wrap">
-          <img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded" />
+          <img src="{% static 'images/banners/2.jpg' %}" class="img-fluid rounded" />
         </div>
       </div> <!-- container // -->
     </section>
@@ -25,9 +25,9 @@
           {% for product in products %}
           <div class="col-md-3">
             <div class="card card-product-grid">
-              <a href="./product-detail.html" class="img-wrap"><img src="{{ product.image.url }}" /></a>
+              <a href="{{ product.get_url }}" class="img-wrap"><img src="{{ product.image.url }}" /></a>
               <figcaption class="info-wrap">
-                <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
+                <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
                 <div class="price mt-1">₦{{ product.price }}</div> <!-- price-wrap.// -->
               </figcaption>
             </div>
