--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -47,7 +47,7 @@
                 </div>
               </div> <!-- row.// -->
               <hr />
-              {% if single_product.quantity > 0 %}
+              {% if single_product.stock <= 0 %}
                 <h5>Out Of Stock</h5>
                 {% else %}
               <a href="./product-detail.html" class="btn btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></a>
