--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -16,16 +16,17 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                {% for item in cart_items %}
+                <tr> 
                   <td>
                     <figure class="itemside align-items-center">
                       <div class="aside">
-                        <img src="{% static './images/items/11.jpg' %}" class="img-sm" />
+                        <img src="{{ item.product.image.url }}" class="img-sm" />
                       </div>
                       <figcaption class="info">
-                        <a href="#" class="title text-dark">Camera Canon EOS M50 Kit</a>
+                        <a href="#" class="title text-dark">{{ item.product.product_name }}</a>
                         <p class="text-muted small">
-                          Matrix: 25 Mpx <br /> Brand: Canon
+                          Color: 25 Mpx <br /> Size: Canon
                         </p>
                       </figcaption>
                     </figure>
@@ -35,25 +36,26 @@
                     <div class="col">
                       <div class="input-group input-spinner">
                         <div class="input-group-prepend">
-                          <button class="btn btn-light" type="button" id="button-plus"><i class="fa fa-minus"></i></button>
+                          <a href="{% url 'cart_remove' item.product.id %}" class="btn btn-light" type="button" id="button-plus"><i class="fa fa-minus"></i> </a>
                         </div>
-                        <input type="text" class="form-control" value="1" />
+                        <input type="text" class="form-control" value="{{item.quantity}}" />
                         <div class="input-group-append">
-                          <button class="btn btn-light" type="button" id="button-minus"><i class="fa fa-plus"></i></button>
+                          <a href="{% url 'add_cart' item.product.id %}" class="btn btn-light" type="button" id="button-minus"><i class="fa fa-plus"></i> </a>
                         </div>
                       </div> <!-- input-group.// -->
                     </div> <!-- col.// -->
                   </td>
                   <td>
                     <div class="price-wrap">
-                      <var class="price">$1156.00</var>
-                      <small class="text-muted">$315.20 each</small>
+                      <var class="price">₦ {{ item.sub_total }}</var>
+                      <small class="text-muted">₦ {{ item.product.price }}</small>
                     </div> <!-- price-wrap .// -->
                   </td>
                   <td class="text-right">
-                    <a href="" class="btn btn-danger">Remove</a>
+                    <a href="{% url 'delete_cart_item' item.product.id %}" class="btn btn-danger">Remove</a>
                   </td>
                 </tr>
+                {% endfor %}
               </tbody>
             </table>
           </div> <!-- card.// -->
@@ -63,15 +65,15 @@
             <div class="card-body">
               <dl class="dlist-align">
                 <dt>Total price:</dt>
-                <dd class="text-right">$69.97</dd>
+                <dd class="text-right">₦ {{ total }}</dd>
               </dl>
               <dl class="dlist-align">
                 <dt>Tax:</dt>
-                <dd class="text-right">$10.00</dd>
+                <dd class="text-right">₦ {{ tax }}</dd>
               </dl>
               <dl class="dlist-align">
-                <dt>Total:</dt>
-                <dd class="text-right text-dark b"><strong>$59.97</strong></dd>
+                <dt>Grand Total:</dt>
+                <dd class="text-right text-dark b"><strong>₦ {{ grand_total }}</strong></dd>
               </dl>
               <hr />
               <p class="text-center mb-3">
