--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,11 @@
               <a href="{{ product.get_url }}" class="img-wrap"><img src="{{ product.image.url }}" /></a>
               <figcaption class="info-wrap">
                 <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                <div class="price mt-1">₦{{ product.price }}</div> <!-- price-wrap.// -->
+                <div class="price-wrap mt-2">
+                  <span class="price">₦{{ product.price }}</span>
+                  <del class="price-old">₦{{ product.price }}</del>
+                </div> <!-- price-wrap.// -->
+                <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart</a>
               </figcaption>
             </div>
           </div> <!-- col.// -->
