--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -67,7 +67,7 @@
                 <div class="icon icon-sm rounded-circle border">
                   <i class="fa fa-shopping-cart"></i>
                 </div>
-                <span class="badge badge-pill badge-danger notify">0</span>
+                <span class="badge badge-pill badge-danger notify">{{ count }}</span>
               </a>
             </div> <!-- widgets-wrap.// -->
           </div> <!-- col.// -->
