--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -14,6 +14,7 @@
             </article> <!-- gallery-wrap .end// -->
           </aside>
           <main class="col-md-6 border-left">
+            <form action="{% url 'add_cart' single_product.id %}" method="GET">
             <article class="content-body">
               <h2 class="title">{{ single_product.product_name }}</h2>
 
@@ -27,12 +28,13 @@
               <div class="row">
                 <div class="item-option-select">
                   <h6>Choose Color</h6>
-                  <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-light"><input type="radio" name="radio_color" />Silver</label>
-                    <label class="btn btn-light"><input type="radio" name="radio_color" />Gray</label>
-                    <label class="btn btn-light active"><input type="radio" name="radio_color checked" />Gold</label>
-                    <label class="btn btn-light"><input type="radio" name="radio_color" />Black</label>
-                  </div>
+                  <select name="color" class="form-control">
+                    <option value="red">
+                      {% for color in single_product.color.all %}
+                        <option value="{{ color }}">{{ color }}</option>
+                      {% endfor %}
+                    </option>
+                  </select>
                 </div>
               </div> <!-- row.// -->
               <div class="row">
@@ -54,10 +56,11 @@
                   <a href="#" class="btn btn-success"><span class="text">Added to Cart</span> <i class="fas fa-check"></i></a>
                   <a href="{% url 'cart' %}" class="btn btn-outline-primary"><span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
                   {% else %}
-                  <a href="{% url 'add_cart' single_product.id %}" class="btn btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></a>
+                  <button type="submit" class="btn btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></button>
                   {% endif %}
               {% endif %}
-            </article> <!-- product-info-aside .// -->
+            </article>
+          </form> <!-- product-info-aside .// -->
           </main> <!-- col.// -->
         </div> <!-- row.// -->
       </div> <!-- card.// -->
