--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<section class="section-content padding-y bg">
+  <section class="section-content padding-y bg">
     <div class="container">
       <!-- ============================ COMPONENT 1 ================================= -->
       <div class="card">
@@ -14,52 +14,53 @@
             </article> <!-- gallery-wrap .end// -->
           </aside>
           <main class="col-md-6 border-left">
-            <form action="{% url 'add_cart' single_product.id %}" method="GET">
-            <article class="content-body">
-              <h2 class="title">{{ single_product.product_name }}</h2>
+            <form action="{% url 'add_cart' single_product.id %}" method="POST">
+              {% csrf_token %}
+              <article class="content-body">
+                <h2 class="title">{{ single_product.product_name }}</h2>
 
-              <div class="mb-3">
-                <var class="price h4">₦{{ single_product.price }}</var>
-              </div>
+                <div class="mb-3">
+                  <var class="price h4">₦{{ single_product.price }}</var>
+                </div>
 
-              <p>{{ single_product.description }}</p>
+                <p>{{ single_product.description }}</p>
 
-              <hr />
-              <div class="row">
-                <div class="item-option-select">
-                  <h6>Choose Color</h6>
-                  <select name="color" class="form-control" required>
-                    <option value="" disabled selected>Choose Color</option>
-                      {% for color in single_product.variation_set.all %}
-                        <option value="{{ color.variation_value }}">{{ color.variation_value }}</option>
+                <hr />
+                <div class="row">
+                  <div class="item-option-select">
+                    <h6>Choose Color</h6>
+                    <select name="color" class="form-control" required>
+                      <option value="" disabled selected>Select</option>
+                      {% for color in single_product.variation_set.colors %}
+                        <option value="{{ color.variation_value|capfirst }}">{{ color.variation_value|capfirst }}</option>
                       {% endfor %}
-                  </select>
-                </div>
-              </div> <!-- row.// -->
-              {% comment %} <div class="row">
-                <div class="item-option-select">
-                  <h6>Select Size</h6>
-                  <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-light"><input type="radio" name="radio_color" />S</label>
-                    <label class="btn btn-light active"><input type="radio" name="radio_color" checked />M</label>
-                    <label class="btn btn-light"><input type="radio" name="radio_color" />L</label>
-                    <label class="btn btn-light"><input type="radio" name="radio_color" />XL</label>
+                    </select>
                   </div>
-                </div>
-              </div> <!-- row.// --> {% endcomment %}
-              <hr />
-              {% if single_product.stock <= 0 %}
-                <h5>Out Of Stock</h5>
+                </div> <!-- row.// -->
+                <div class="row">
+                  <div class="item-option-select">
+                    <h6>Select Size</h6>
+                    <select name="color" class="form-control" required>
+                      <option value="" disabled selected>Select</option>
+                      {% for color in single_product.variation_set.sizes %}
+                        <option value="{{ color.variation_value|capfirst }}">{{ color.variation_value|capfirst }}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                </div> <!-- row.// -->
+                <hr />
+                {% if single_product.stock <= 0 %}
+                  <h5>Out Of Stock</h5>
                 {% else %}
                   {% if in_cart %}
-                  <a href="#" class="btn btn-success"><span class="text">Added to Cart</span> <i class="fas fa-check"></i></a>
-                  <a href="{% url 'cart' %}" class="btn btn-outline-primary"><span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
+                    <a href="#" class="btn btn-success"><span class="text">Added to Cart</span> <i class="fas fa-check"></i></a>
+                    <a href="{% url 'cart' %}" class="btn btn-outline-primary"><span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
                   {% else %}
-                  <button type="submit" class="btn btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></button>
+                    <button type="submit" class="btn btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></button>
                   {% endif %}
-              {% endif %}
-            </article>
-          </form> <!-- product-info-aside .// -->
+                {% endif %}
+              </article>
+            </form> <!-- product-info-aside .// -->
           </main> <!-- col.// -->
         </div> <!-- row.// -->
       </div> <!-- card.// -->
@@ -90,4 +91,4 @@
     </div> <!-- container .// -->
   </section>
   <!-- ========================= SECTION CONTENT END// ========================= -->
-{% endblock  %}
+{% endblock %}
