--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -32,7 +32,7 @@
                     <select name="color" class="form-control" required>
                       <option value="" disabled selected>Select</option>
                       {% for color in single_product.variation_set.colors %}
-                        <option value="{{ color.variation_value|capfirst }}">{{ color.variation_value|capfirst }}</option>
+                        <option value="{{ color.variation_value| capfirst }}">{{ color.variation_value| capfirst }}</option>
                       {% endfor %}
                     </select>
                   </div>
@@ -42,8 +42,8 @@
                     <h6>Select Size</h6>
                     <select name="color" class="form-control" required>
                       <option value="" disabled selected>Select</option>
-                      {% for color in single_product.variation_set.sizes %}
-                        <option value="{{ color.variation_value|capfirst }}">{{ color.variation_value|capfirst }}</option>
+                      {% for size in single_product.variation_set.sizes %}
+                        <option value="{{ size.variation_value| capfirst }}">{{ size.variation_value| capfirst }}</option>
                       {% endfor %}
                     </select>
                   </div>
