--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -32,7 +32,7 @@
                     <select name="color" class="form-control" required>
                       <option value="" disabled selected>Select</option>
                       {% for color in single_product.variation_set.colors %}
-                        <option value="{{ color.variation_value| capfirst }}">{{ color.variation_value| capfirst }}</option>
+                        <option value="{{ color.variation_value| lower }}">{{ color.variation_value| capfirst }}</option>
                       {% endfor %}
                     </select>
                   </div>
@@ -40,10 +40,10 @@
                 <div class="row">
                   <div class="item-option-select">
                     <h6>Select Size</h6>
-                    <select name="color" class="form-control" required>
+                    <select name="size" class="form-control" required>
                       <option value="" disabled selected>Select</option>
                       {% for size in single_product.variation_set.sizes %}
-                        <option value="{{ size.variation_value| capfirst }}">{{ size.variation_value| capfirst }}</option>
+                        <option value="{{ size.variation_value| lower }}">{{ size.variation_value| capfirst }}</option>
                       {% endfor %}
                     </select>
                   </div>
@@ -52,12 +52,7 @@
                 {% if single_product.stock <= 0 %}
                   <h5>Out Of Stock</h5>
                 {% else %}
-                  {% if in_cart %}
-                    <a href="#" class="btn btn-success"><span class="text">Added to Cart</span> <i class="fas fa-check"></i></a>
-                    <a href="{% url 'cart' %}" class="btn btn-outline-primary"><span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
-                  {% else %}
                     <button type="submit" class="btn btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></button>
-                  {% endif %}
                 {% endif %}
               </article>
             </form> <!-- product-info-aside .// -->
