--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -26,18 +26,18 @@
                 </tr>
               </thead>
               <tbody>
-                {% for item in cart_items %}
+                {% for cart_item in cart_items %}
                 <tr> 
                   <td>
                     <figure class="itemside align-items-center">
                       <div class="aside">
-                        <img src="{{ item.product.image.url }}" class="img-sm" />
+                        <img src="{{ cart_item.product.image.url }}" class="img-sm" />
                       </div>
                       <figcaption class="info">
-                        <a href="{{ item.product.get_url }}" class="title text-dark">{{ item.product.product_name }}</a>
+                        <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
                         <p class="text-muted small">
-                          {% if item.variations.all %}
-                            {% for variation in item.variations.all %}
+                          {% if cart_item.variations.all %}
+                            {% for variation in cart_item.variations.all %}
                               {{ variation.variation_category | capfirst }}: {{ variation.variation_value | capfirst }} <br>
                             {% endfor %}
                           {% endif %}
@@ -50,23 +50,29 @@
                     <div class="col">
                       <div class="input-group input-spinner">
                         <div class="input-group-prepend">
-                          <a href="{% url 'cart_remove' item.product.id %}" class="btn btn-light" type="button" id="button-plus"><i class="fa fa-minus"></i> </a>
+                          <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"><i class="fa fa-minus"></i> </a>
                         </div>
-                        <input type="text" class="form-control" value="{{item.quantity}}" />
+                        <input type="text" class="form-control" value="{{cart_item.quantity}}" />
                         <div class="input-group-append">
-                          <a href="{% url 'add_cart' item.product.id %}" class="btn btn-light" type="button" id="button-minus"><i class="fa fa-plus"></i> </a>
+                          <form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+                          {% csrf_token %}
+                          {% for item in cart_item.variations.all  %}
+                            <input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
+                          {% endfor %}
+                            <button class="btn btn-light" type="submit" id="button-minus"><i class="fa fa-plus"></i> </button>
+                          </form>
                         </div>
                       </div> <!-- input-group.// -->
                     </div> <!-- col.// -->
                   </td>
                   <td>
                     <div class="price-wrap">
-                      <var class="price">₦ {{ item.sub_total }}</var>
-                      <small class="text-muted">₦ {{ item.product.price }}</small>
+                      <var class="price">₦ {{ cart_item.sub_total }}</var>
+                      <small class="text-muted">₦ {{ cart_item.product.price }}</small>
                     </div> <!-- price-wrap .// -->
                   </td>
                   <td class="text-right">
-                    <a href="{% url 'delete_cart_item' item.product.id %}" class="btn btn-danger">Remove</a>
+                    <a href="{% url 'delete_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('You are about to delete this Item')" class="btn btn-danger">Remove</a>
                   </td>
                 </tr>
               </tbody>
