--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -1,70 +1,52 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <!-- ========================= SECTION CONTENT ========================= -->
   <section class="section-content padding-y">
     <!-- ============================ COMPONENT REGISTER ================================= -->
-    <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
+    <div class="card mx-auto" style="max-width:540px; margin-top:40px;">
       <article class="card-body">
         <header class="mb-4">
           <h4 class="card-title">Sign up</h4>
         </header>
-        <form>
+        <form action="{% url 'register' %}" method="POST">
           {% csrf_token %}
-          {{ form.as_p }}
+
           <div class="form-row">
-            <div class="col form-group">
+            <div class="col form-group col-md-6">
               <label>First name</label>
-              <input type="text" class="form-control" placeholder="" />
+              {{ form.first_name }}
             </div> <!-- form-group end.// -->
-            <div class="col form-group">
+            <div class="col form-group col-md-6">
               <label>Last name</label>
-              <input type="text" class="form-control" placeholder="" />
+              {{ form.last_name }}
             </div> <!-- form-group end.// -->
           </div> <!-- form-row end.// -->
-          <div class="form-group">
-            <label>Email</label>
-            <input type="email" class="form-control" placeholder="" />
-            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-          </div> <!-- form-group end.// -->
-          <div class="form-group">
-            <label class="custom-control custom-radio custom-control-inline">
-              <input class="custom-control-input" checked="" type="radio" name="gender" value="option1" />
-              <span class="custom-control-label">Male</span>
-            </label>
-            <label class="custom-control custom-radio custom-control-inline">
-              <input class="custom-control-input" type="radio" name="gender" value="option2" />
-              <span class="custom-control-label">Female</span>
-            </label>
-          </div> <!-- form-group end.// -->
+
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label>City</label>
-              <input type="text" class="form-control" />
+              <label>Email Address</label>
+              {{ form.email }}
             </div> <!-- form-group end.// -->
             <div class="form-group col-md-6">
-              <label>Country</label>
-              <select name="country" id="inputState" class="form-control">
-                <option>Choose...</option>
-                {% for country in countries %}
-                  <option value="{{ country.code }}">{{ country.name }}</option>
-                {% endfor %}
-              </select>
+              <label>Phone Number</label>
+              {{ form.phone_number }}
             </div> <!-- form-group end.// -->
           </div> <!-- form-row.// -->
           <div class="form-row">
             <div class="form-group col-md-6">
               <label>Create password</label>
-              <input class="form-control" type="password" />
+              {{ form.password }}
             </div> <!-- form-group end.// -->
             <div class="form-group col-md-6">
               <label>Repeat password</label>
-              <input class="form-control" type="password" />
+              {{ form.confirm_password }}
             </div> <!-- form-group end.// -->
           </div>
-          <div class="form-group">
+          <div class="form-group ">
             <button type="submit" class="btn btn-primary btn-block">Register</button>
           </div> <!-- form-group// -->
+          {{ form.email.errors }}
+          {{ form.non_field_errors }}
         </form>
       </article>
       <!-- card-body.// -->
@@ -75,5 +57,4 @@
     <br /><br />
     <!-- ============================ COMPONENT REGISTER END.// ================================= -->
   </section>
-  <!-- ========================= SECTION CONTENT END// ========================= -->
 {% endblock %}
