--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -45,6 +45,9 @@
           <div class="form-group ">
             <button type="submit" class="btn btn-primary btn-block">Register</button>
           </div> <!-- form-group// -->
+          {{ form.first_name.errors }}
+          {{ form.last_name.errors }}
+          {{ form.phone_number.errors }}
           {{ form.email.errors }}
           {{ form.non_field_errors }}
         </form>
