--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -5,6 +5,7 @@
     <!-- ============================ COMPONENT REGISTER ================================= -->
     <div class="card mx-auto" style="max-width:540px; margin-top:40px;">
       <article class="card-body">
+        {% include "includes/alerts.html" %}
         <header class="mb-4">
           <h4 class="card-title">Sign up</h4>
         </header>
