--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="cache-control" content="max-age=604800" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>GreatKart | One of the Biggest Online Shopping Platform</title>
+    <title>SamMart | One of the Biggest Online Shopping Platform</title>
     {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> {% endcomment %}
 
     <link href="{% static 'images/favicon.ico'%}" rel="shortcut icon" type="image/x-icon" />
