--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,10 +15,10 @@
           </ul>
           <ul class="navbar-nav">
             <li>
-              <a href="#" class="nav-link"><i class="fa fa-envelope"></i> Email</a>
+              <a href="mailto:ogundarearnold@gmail.com" class="nav-link"><i class="fa fa-envelope"></i> Email</a>
             </li>
             <li>
-              <a href="#" class="nav-link"><i class="fa fa-phone"></i> Call us</a>
+              <a href="tel:+2348169261295" class="nav-link"><i class="fa fa-phone"></i> Call us</a>
             </li>
           </ul> <!-- list-inline // -->
         </div> <!-- navbar-collapse .// -->
@@ -56,6 +56,7 @@
           </div> <!-- col.// -->
           <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
             <div class="d-flex justify-content-end mb-3 mb-lg-0">
+            {% if user.id is None %}
               <div class="widget-header">
                 <small class="title text-muted">Welcome guest!</small>
                 <div>
@@ -63,6 +64,15 @@
                   <a href="{% url 'register' %}">Register</a>
                 </div>
               </div>
+              {% else %}
+              <div class="widget-header">
+                <small class="title text-muted">Welcome {{ user.first_name }}!</small>
+                <div>
+                  <a href="#">Dashboard</a> <span class="dark-transp">|</span>
+                  <a href="{% url 'logout' %}">Logout</a>
+                </div>
+              </div>
+            {% endif %}
               <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
                 <div class="icon icon-sm rounded-circle border">
                   <i class="fa fa-shopping-cart"></i>
