--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -4,6 +4,14 @@
   <!-- ========================= SECTION CONTENT ========================= -->
   <section class="section-conten padding-y" style="min-height:84vh">
     <!-- ============================ COMPONENT LOGIN ================================= -->
+    {% if request.GET.command == 'verification' %}
+    <div class="conatiner mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
+      Thank you for registering. We have sent an activation email to the registered email. Please click on the activation link to activate your account [{{request.GET.email}}]
+      <br><br>
+      Already Verified? <a href="{% url 'login' %}">Login</a>
+    </div>
+
+    {% else %}
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
       <div class="card-body">
         <h4 class="card-title mb-4">Sign in</h4>
@@ -33,6 +41,7 @@
       Don't have account? <a href="{% url 'register' %}">Sign up</a>
     </p>
     <br /><br />
+    {% endif %}
     <!-- ============================ COMPONENT LOGIN END.// ================================= -->
   </section>
   <!-- ========================= SECTION CONTENT END// ========================= -->
