--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -72,58 +72,58 @@
                     <textarea class="form-control" name="order_note" rows="2"></textarea>
                   </div> <!-- form-group end.// -->
                 </div> <!-- form-row end.// -->
-                {% comment %} <button class="btn btn-primary btn-block">Place Order</button> {% endcomment %}
             </div>
           </div> <!-- card.// -->
-        </aside> <!-- col.// -->
-        <aside class="col-lg-6">
-          <div class="card">
-            <table class="table table-borderless table-shopping-cart">
-              <thead class="text-muted">
-                <tr class="small text-uppercase">
-                  <th scope="col">Product</th>
-                  <th scope="col" width="120">Quantity</th>
-                  <th scope="col" width="120">Price</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for cart_item in cart_items %}
-                <tr> 
-                  <td>
-                    <figure class="itemside align-items-center">
-                      <div class="aside">
-                        <img src="{{ cart_item.product.image.url }}" class="img-sm" />
-                      </div>
-                      <figcaption class="info">
-                        <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-                        <p class="text-muted small">
-                          {% if cart_item.variations.all %}
-                            {% for variation in cart_item.variations.all %}
-                              {{ variation.variation_category | capfirst }}: {{ variation.variation_value | capfirst }} <br>
-                            {% endfor %}
-                          {% endif %}
-                        </p>
-                      </figcaption>
-                    </figure>
-                  </td>
-                  <td>
-                   <label for="">{{ cart_item.quantity }}</label>
-                  </td>
-                  <td>
-                    <div class="price-wrap">
-                      <var class="price">₦ {{ cart_item.sub_total }}</var>
-                      <small class="text-muted">₦ {{ cart_item.product.price }}</small>
-                    </div> <!-- price-wrap .// -->
-                  </td>
-                </tr>
-              </tbody>
-              {% endfor %}
-            </table>
-              <a href="./place-order.html" class="btn btn-primary btn-block">Place Order</a>
-              <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
-            </div> <!-- card-body.// -->
-          </div> <!-- card.// -->
-        </aside> <!-- col.// -->
+          </aside> <!-- col.// -->
+            <aside class="col-lg-6">
+              <div class="card">
+                <table class="table table-borderless table-shopping-cart">
+                  <thead class="text-muted">
+                    <tr class="small text-uppercase">
+                      <th scope="col">Product</th>
+                      <th scope="col" width="120">Quantity</th>
+                      <th scope="col" width="120">Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for cart_item in cart_items %}
+                    <tr> 
+                      <td>
+                        <figure class="itemside align-items-center">
+                          <div class="aside">
+                            <img src="{{ cart_item.product.image.url }}" class="img-sm" />
+                          </div>
+                          <figcaption class="info">
+                            <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+                            <p class="text-muted small">
+                              {% if cart_item.variations.all %}
+                                {% for variation in cart_item.variations.all %}
+                                  {{ variation.variation_category | capfirst }}: {{ variation.variation_value | capfirst }} <br>
+                                {% endfor %}
+                              {% endif %}
+                            </p>
+                          </figcaption>
+                        </figure>
+                      </td>
+                      <td>
+                      <label for="">{{ cart_item.quantity }}</label>
+                      </td>
+                      <td>
+                        <div class="price-wrap">
+                          <var class="price">₦ {{ cart_item.sub_total }}</var>
+                          <small class="text-muted">₦ {{ cart_item.product.price }}</small>
+                        </div> <!-- price-wrap .// -->
+                      </td>
+                    </tr>
+                  </tbody>
+                  {% endfor %}
+                </table>
+                  <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
+                  <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+                </form>
+                </div> <!-- card-body.// -->
+              </div> <!-- card.// -->
+            </aside> <!-- col.// -->
       </div> <!-- row.// -->
       <!-- ============================ COMPONENT 1 END .// ================================= -->
     </div> <!-- container .// -->
