Integrated Paypal Payment Mode

--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -97,7 +97,8 @@
               <p class="text-center mb-3">
                 <img src="{% static './images/misc/payments.png' %}" height="26" />
               </p>
-              <a href="{% url 'checkout' %}" class="btn btn-primary btn-block">Make Payment</a>
+              <div id="paypal-button-container">
+              </div>
             </div> <!-- card-body.// -->
           </div> <!-- card.// -->
         </aside> <!-- col.// -->
@@ -108,4 +109,56 @@
     </div> <!-- container .// -->
   </section>
 
+
+  <script>
+
+    var amount = {{ grand_total }};
+
+    // Render the PayPal button
+
+    paypal.Button.render({
+
+        // Set your environment
+
+        env: 'sandbox', // sandbox | production
+
+        // Specify the style of the button
+
+        style: {
+            label: 'checkout',
+            size:  'responsive',    // small | medium | large | responsive
+            shape: 'pill',     // pill | rect
+            color: 'blue'      // gold | blue | silver | black
+        },
+
+        // PayPal Client IDs - replace with your own
+        // Create a PayPal app: https://developer.paypal.com/developer/applications/create
+
+        client: {
+            sandbox:    'AaUVhVld9Y8UMTYHT5UZWWZE7wDQP_WW9seZ8K1sbgP4lq5_nbd6IZoUiRl7rJGKq6y4ps56MMUrhsil',
+            production: '<insert production client id>'
+        },
+
+        payment: function(data, actions) {
+            return actions.payment.create({
+                payment: {
+                    transactions: [
+                        {
+                            amount: { total: amount, currency: 'USD' }
+                        }
+                    ]
+                }
+            });
+        },
+
+        onAuthorize: function(data, actions) {
+            return actions.payment.execute().then(function() {
+                window.alert('Payment Complete!');
+            });
+            
+        }
+
+    }, '#paypal-button-container');
+
+</script>
 {% endblock %}
